# PythonVisualDebugger

./: CMakeLists.txt  README.md
HapDebugger/: CMakeLists.txt  Hap2008.sln  HowToBuild.txt  Readme.txt  binBuildLog.txt  filter.txt  hap.sln  makerelease.bat
HapDebugger/AlienApiWrapper/: AlienApiWrapper.cpp  AlienApiWrapper.h  AlienApiWrapper.vcproj  StdAfx.cpp  StdAfx.h
HapDebugger/DbgNetLib/: DbgNetLib.vcproj  HeDbgMsg.cpp  StdAfx.cpp
HapDebugger/HapClient/: ConsoleEmbed.cpp  ConsoleEmbed.h  ConsoleEmbed.rc  HapClient.vcproj  HapClient.vcxproj  HapClient.vcxproj.filters  ReadMe.txt  StdAfx.cpp  StdAfx.h  resource.h
HapDebugger/HapDbg/: Break.cpp  Break.h  Breakpoint.cpp  Breakpoint.h  CMakeLists.txt  Connect.h  HeDbg.cpp  HeDbg.h  Init.cpp  ReadMe.txt  Run.cpp  Run.h  StdAfx.cpp  StdAfx.h  VariablesMsg.cpp  hapdbg.cpp  hapdbg.h  hapdbg.vcproj  hapdbg.vcxproj  hapdbg.vcxproj.filters
HapDebugger/HapDebugger/: AboutDlg.cpp  AboutDlg.h  BrowseSelDlg.cpp  BrowseSelDlg.h  CMakeLists.txt  ChildFrm.cpp  ChildFrm.h  ConnectSettingsDlg.cpp  ConnectSettingsDlg.h  ConnectStatusBar.cpp  DataDisplayDlg.cpp  DataDisplayDlg.h  DbgRemote.cpp  DbgRemote.rc  DbgRemoteDoc.cpp  DbgRemoteView.cpp  DbgRemoteView.h  DebugOptionsPage.h  DocSelectDlg.cpp  DocSelectDlg.h  EditorOptsPg.h  FileGroup.cpp  FileModifiedDlg.cpp  FilePropDlg.h  GotoLineDlg.h  GroupPropertiesDlg.cpp  GroupPropertiesDlg.h  HapDebugger.vcproj  MainFrm.cpp  MainFrm.h  OptionsDlg.cpp  OptionsDlg.h  PdpManager.cpp  ProjectViewBar.cpp  RegistryOptionsPg.cpp  RunOptionsDlg.h  SourceControlInterface.cpp  SourceControlInterface.h  StackViewBar.cpp  StackViewBar.h  (+8 more)
HapDebugger/HapDebugger/res/: DbgRemote.rc2
HapDebugger/P4ApiWrapper/: P4ApiWrapper.cpp  P4ApiWrapper.h  P4ApiWrapper.vcproj  P4ApiWrapper.vcxproj  P4ApiWrapper.vcxproj.filters  P4ClientUser.cpp  P4ClientUser.h  StdAfx.h
HapDebugger/expat/: CMakeLists.txt  expat.h  expat.vcproj  expat.vcxproj.filters  xmlparse.c
HapDebugger/hecore/: errorhandler.cpp  errorhandler.h  fixedassert.cpp  handleexceptions.cpp  hecore.h  hecore.vcproj  hecore.vcxproj.filters  miscwinfunctions.cpp  randomnumbers.cpp
HapDebugger/scintilla/: ScintRes.rc  Scintilla.vcxproj.filters
HapDebuggerClient/: CMakeLists.txt
HapDebuggerClient/DbgNetLib/: CMakeLists.txt  HeDbgMsg.h  HeDbgSocket.cpp  HeDbgSocket.h  StdAfx.h
HapDebuggerClient/HapDbg/: Break.cpp  Breakpoint.cpp  Connect.cpp  DbgGlobals.h  HeDbg.cpp  Init.h  Run.cpp  VariablesMsg.cpp  VariablesMsg.h  hapdbg.cpp  hapdbg.h
HapDebuggerClient/OssInclude/: OssInclude.h
HapDebuggerClient/hecore/: CMakeLists.txt  handleexceptions.cpp  hestring.h  miscwinfunctions.cpp  priv_coreprecompiled.h  threadcore.cpp  threadcore.h
HapDebuggerServer/: Hap2008.sln  KnownDefects.txt  ToDo.txt
HapDebuggerServer/DbgNetLib/: DbgNetLib.vcxproj  DbgNetLib.vcxproj.filters  Readme.txt
HapDebuggerServer/HapDebugger/: AboutDlg.cpp  AboutDlg.h  AppOptionsMainPg.cpp  AppOptionsMainPg.h  BreakpointDlg.cpp  BreakpointDlg.h  ConnectSettingsDlg.cpp  ConnectStatusBar.h  DbgRemote.cpp  DbgRemote.h  DbgRemote.rc  DbgRemoteDoc.cpp  DbgRemoteDoc.h  DbgRemoteView.cpp  DbgRemoteView.h  DebugOptionsPage.cpp  EditorOptsPg.cpp  ExceptionHandlerHook.cpp  FileFindDlg.cpp  FileFindDlg.h  FileGroup.h  FileModifiedDlg.h  FilePropDlg.cpp  FindInProjectDlg.cpp  FindInProjectDlg.h  GotoLineDlg.cpp  HapDebugger.vcproj  HapDebugger.vcxproj  HapDebugger.vcxproj.filters  MainFrm.cpp  MainFrm.h  PdpManager.cpp  PdpManager.h  ProjectSettingsDlg.cpp  ProjectSettingsDlg.h  ProjectViewBar.cpp  ProjectViewBar.h  ReadMe.txt  RegistryOptionsPg.h  RunOptionsDlg.cpp  (+19 more)
HapDebuggerServer/expat/: expat.h  expat.vcproj  expat.vcxproj  libexpat.def  ps2config.h  xmlparse.c  xmlrole.c  xmltok.c
HapDebuggerServer/hecore/: fixedassert.cpp  hecore.vcproj  hecore.vcxproj  hestring.cpp  randomnumbers.h
HapDebuggerServer/scintilla/: Scintilla.vcproj  Scintilla.vcxproj
PythonVisualDebugger/: CMakeLists.txt  qSlicerPythonVisualDebuggerModule.cxx  qSlicerPythonVisualDebuggerModule.h  qSlicerPythonVisualDebuggerModuleWidget.cxx  qSlicerPythonVisualDebuggerModuleWidget.h
PythonVisualDebugger/Logic/: CMakeLists.txt  vtkSlicerPythonVisualDebuggerLogic.cxx  vtkSlicerPythonVisualDebuggerLogic.h
PythonVisualDebugger/Resources/: qSlicerPythonVisualDebuggerModule.qrc
PythonVisualDebugger/Widgets/: qSlicerPythonVisualDebuggerFooBarWidget.cxx  qSlicerPythonVisualDebuggerFooBarWidget.h
(+55 files in other folders)
